chat messages overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,16 @@ code {
 }
 
 #chat-messages{
-  padding-bottom: 150px;
+  height: calc(100vh - 130px);
   overflow: scroll;
-  height: inherit;
+  overflow-x: hidden;
+}
+
+#chat-messages::-webkit-scrollbar {
+  position: absolute;
+  right: 0;
+  width: 10px;
+  background-color: #F5F5F5;
 }
 
 #chat-name {
